--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@ vision lol
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="/js/vendor.js"></script>
 <script type="text/javascript" src="/js/slick.js"></script>
-<script type="text/javascript" src="/js/scripts/slickuser2.js"></script>
+<script type="text/javascript" src="/js/scripts/indexpage.js"></script>
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/skeleton.css">
@@ -42,26 +42,26 @@ vision lol
         <div class="offset-by-three six columns">
           <img id="logo" class="u-max-full-width" src="img/visionlogo.png">
         </div>
-    </div>
+      </div>
 
       <div class="row">
         <div class="offset-by-one ten columns divider"></div>
       </div>
-      <div class="row">
+      <div class="row linkz">
         <div class="choice offset-by-two two columns">
-          VISION
+          <span>VISION</span>
         </div>
         <div class="choice two columns">
-          PRODUCTS
+          <span>PRODUCTS</span>
         </div>
         <div class="choice two columns">
-          TEAM
+          <span>TEAM</span>
         </div>
         <div class="choice two columns">
-          CONTACT
+          <span>CONTACT</span>
         </div>
       </div>
-       <div class="row">
+      <div class="row">
         <div class="offset-by-one ten columns divider"></div>
       </div>
 
@@ -69,25 +69,24 @@ vision lol
         <div class="ten front columns offset-by-one">
           <div class="catchphrase">
 
-        </div>
+          </div>
         </div>
         <div class="one column"></div>
 
       </div>
 
-     <!-- <div class="row"> -->
-        <!-- <div class="offset-by-four four columns"> -->
-        <div class="headline">
-          <img src='emojis/475.png'>
-          <span>Our Vision</span>
-          <img class='flipped' src='emojis/475.png'>
+      <div class="row">
+        <div class="offset-by-one ten columns">
+          <div id="vision" class="headline">
+            <img src='emojis/475.png'>
+            <span>Our Vision</span>
+            <img class='flipped' src='emojis/475.png'>
+          </div>
         </div>
-
-        <!-- </div> -->
-      <!-- </div> -->
+      </div>
 
       <div class="row">
-          <div class="five columns offset-by-one description">
+        <div class="five columns offset-by-one description">
           <div class="subheader">
             <img src="emojis/389.png">
             Modern Language For A Modern World
@@ -95,176 +94,141 @@ vision lol
           <p>Many written languages have existed for more than 5,000 years. Would you ride in a 5,000-year-old airplane? Would you use a 100-year-old computer? At EmojiVision Industries, we don't think so either. </p>
           <p>It's time for an upgrade.</p>
         </div>
-        <div class="five columns description">
+
+        <div class="five columns">
+          <img  class="business-img u-max-full-width" src='img/business.jpg'>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="ten columns offset-by-one description">
+
           <div class="subheader">
             <img src="emojis/440.png">
             Tear Down The Language Wall</div>
-          <p>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</p>
+            <p>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</p>
+          </div>
         </div>
-      </div>
 
-
-       <div class="row">
-        <div class="offset-by-one ten columns">
-        <div class="headline">
-
-          <img src='emojis/475.png'>
-          <span>Products</span>
-          <img class='flipped' src='emojis/475.png'>
-</div>
-
-        </div>
-      </div>
-
-      <div class="row">
+        <div class="row">
           <div class="ten columns offset-by-one description">
-          <div class="subheader">
-          <a href="/comics">
-            <img src="emojis/538.png">
-            Emoji Comics</div>
-        </a>
-          <div class="img-box">
 
-          <img class="u-max-full-width imgcenter" src="img/examplecomic.png">
+            <div class="subheader">
+              <img src="emojis/341.png">
+              Emoji Monetization</div>
+              <p>Investment. Disruption. Enterprise Technology. Monetization. Emojis.</p>
+              <p>We stay on the cutting edge of Emoji technology and are ready to help you bring your business into the Emoji future.</p>
+
+            </div>
           </div>
-          <p>Many written languages have existed for more than 5,000 years. Would you ride in a 5,000-year-old airplane? Would you use a 100-year-old computer? At EmojiVision Industries, we don't think so either.</p>
-          <p><em>Check out <a href="/comics">Emoji Comics</a></em></p>
-
-        </div>
-      </div>
-      <div class="row">
-          <div class="ten columns description offset-by-one">
-          <div class="subheader">
-          <a href="/code">
-            <img src="emojis/399.png">
-          EmojiCode</div>
-        </a>
-      </div>
-      <div class="row">
-          <div class="four columns description offset-by-four">
-          <img class="center-img" src="img/codeexample.png">
-        </div>
-      </div>
-      <div class="row">
-          <div class="ten columns description offset-by-one">
-
-          <p>Studies have shown that using Emojis in your day-to-day communication. </p>
-          <p><em>Check out <a href="/code">EmojiCode</a></em></p>
-        </div>
-        </div>
-      </div>
-      <div class="row">
-          <div class="ten columns offset-by-one description">
-          <div class="subheader">
-            <img src="emojis/474.png">
-            Labs</div>
-          <p>Aside from our polished products, EmojiVision has a very active research and development department. EmojiVision Labs is an experimental . </p>
-        </div>
-      </div>
 
 
+          <div class="row">
+            <div class="offset-by-one ten columns">
+              <div id="products" class="headline">
 
-       <div class="row">
-        <div class="offset-by-one ten columns">
-        <div class="headline">
+                <img src='emojis/475.png'>
+                <span>Products</span>
+                <img class='flipped' src='emojis/475.png'>
+              </div>
 
-          <img src='emojis/475.png'>
-                   <span>Our Team</span>
-                   <img class='flipped' src='emojis/475.png'>
-        </div>
-      </div>
-
-      <div class="row">
-           <div class="five columns offset-by-one description">
-          <div class="subheader">Professor Moon</div>
-          <img class="u-max-full-width" src="img/profmoon.jpg">
-          <div class="credentials">Founder And Managing Director</div>
-          <p>Professor Moon has been interested in the study of Emojis for more than five decades. As one of the world's leading Emoji scholars, he has worked tirelessly to elevate Emojis. He currently holds four Emoji-related patents and his Emoji-related papers have been cited countless times by the world's top Emoji scholars.</p>
-        </div>
-        <div class="five columns">
-            <div class="subheader">Dr. Jennifer iMessage</div>
-            <img class="u-max-full-width" src="img/jenny.jpg">
-            <div class="credentials">Director Of Research And Development</div>
-            <p>As the scientist at the forefront of the world's most advanced Emoji research programs, Dr. iMessage has been party to some of the most important discoveries. Thanks to her tireless efforts, our understanding of the art and science of Emojis has increased immeasurably. </p>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="row">
-           <div class="five columns offset-by-one description">
-          <div class="subheader">Lukey Q. Pizzaface</div>
-          <img class="u-max-full-width" src="img/pizzaface.jpg">
-          <div class="credentials">Director Of Communication</div>
-          <p>After years in the fast-paced world of Investment Banking, Mr. Pizzaface brings his talents to EmojiVision. Best known for his book, "Emojis Only: Why You've Lost The Moment You Send A Full Word," Pizzaface is on the cutting edge of professional Emoji communication. </p>
-        </div>
-        <div class="five columns">
-            <div class="subheader">Princess Cupcake Fireworks</div>
-            <img class="u-max-full-width" src="img/princess.jpg">
-            <div class="credentials">Chief Royal Advisor</div>
-            <p>As our Royal Advisor, Princess Fireworks helps EmojiVision utilize the vast resources of the Emoji Crown. She's currently helping to finalize the plans to open EmojiVision's first satellite office in the Emoji Kingdom. </p>
+          <div class="row">
+            <div class="ten columns offset-by-one description">
+              <div class="subheader">
+                <a href="/comics">
+                  <img src="emojis/538.png">
+                  Emoji Comics</div>
+                </a>
+                <div class="img-box">
+
+                  <img class="u-max-full-width imgcenter" src="img/examplecomic.png">
+                </div>
+                <p>Create and share comic strips using the entire range of Emoji.</p>
+                <p><em>Check out <a href="/comics">Emoji Comics</a></em></p>
+
+              </div>
+            </div>
+            <div class="row">
+              <div class="ten columns description offset-by-one">
+                <div class="subheader">
+                  <a href="/code">
+                    <img src="emojis/399.png">
+                    EmojiCode</div>
+                  </a>
+                </div>
+                <div class="row">
+                  <div class="four columns description offset-by-four">
+                    <img class="center-img" src="img/codeexample.png">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="ten columns description offset-by-one">
+
+                    <p>A proprietary encryption algorithm designed to convert boring, outdated letters and numbers into pure Emoji.</p>
+                    <p><em>Check out <a href="/code">EmojiCode</a></em></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="offset-by-one ten columns">
+                  <div id="team" class="headline">
+
+                    <img src='emojis/475.png'>
+                    <span>Our Team</span>
+                    <img class='flipped' src='emojis/475.png'>
+                  </div>
+                </div>
+
+                <div class="row">
+                 <div class="five columns offset-by-one description">
+                  <div class="subheader">Professor Moon</div>
+                  <img class="u-max-full-width" src="img/profmoon.jpg">
+                  <div class="credentials">Founder And Managing Director</div>
+                </div>
+                <div class="five columns">
+                  <div class="subheader">Dr. Jennifer iMessage</div>
+                  <img class="u-max-full-width" src="img/jenny.jpg">
+                  <div class="credentials">Director Of Research And Development</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+             <div class="five columns offset-by-one description">
+              <div class="subheader">Lukey Q. Pizzaface</div>
+              <img class="u-max-full-width" src="img/pizzaface.jpg">
+              <div class="credentials">Director Of Communication</div>
+            </div>
+            <div class="five columns">
+              <div class="subheader">Princess Cupcake</div>
+              <img class="u-max-full-width" src="img/princess.jpg">
+              <div class="credentials">Chief Royal Advisor</div>
+            </div>
           </div>
-        </div>
+
+          <div class="row">
+            <div class="offset-by-one ten columns">
+              <div id="contact" class="headline">
+
+                <img src='emojis/475.png'>
+                <span>Contact</span>
+                <img class='flipped' src='emojis/475.png'>
+              </div>
+
+            </div>
+          </div>
 
  <div class="row">
-        <div class="offset-by-one ten columns">
-        <div class="headline">
-
-          <img src='emojis/475.png'>
-          <span>Contact</span>
-          <img class='flipped' src='emojis/475.png'>
-        </div>
+             <div class="ten columns offset-by-one description">
+              <p>For all inquiries, please contact our Director of Communications <a href="http://twitter.com/nah_solo">via twitter</a>.</p>
+            </div>
 
         </div>
+
       </div>
-      <!--
-          <div class="subheader">Swag me The Fuck Out</div>
-           <div>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</div>
-        </div>
-      </div> -->
-
-     <!--  <div class="portfolio-container">
-        <div class="yolo primary-color-bg left"><h1>Welcome To EmojiVision Industries</h1>
-        </div>
-        <div class="swag right manyemojis"></div>
-
-        <div class="clearfix"></div>
-        <div class="headline"><span>Our Vision</span></div>
-        <div class="woop primary-color-bg">
-          <div class="subheader">A Modern Language For A Modern World</div>
-          <p>Many written languages have existed for more than 5,000 years. Would you ride in a 5,000-year-old airplane? Would you use a 100-year-old computer? At EmojiVision Industries, we don't think so either. </p>
-          <p>It's time for an upgrade.</p>
-          <div class="subheader">Tear Down The Language Wall</div>
-          <div>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</div>
-          <div class="subheader">Swag me The Fuck Out</div>
-           <div>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</div>
-        </div>
-        <div class="headline"><span>Products</span></div>
-        <div class="yolo left manyemojis"></div>
-        <div class="swag primary-color-bg right"><h1>EmojiComics</h1>Construct Your Own Emoji Reality</div>
-        <div class="clearfix"></div>
-
-        <div class="swag primary-color-bg left"><h1>EmojiCode</h1>Communicate Entirely In Emojis</div>
-        <div class="yolo right manyemojis"></div>
-        <div class="clearfix"></div>
-        <div class="headline"><span>Our Team</span></div>
- -->
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-
-
-</div>
-
-</div>
-
-</div>
 </body>
 </html>
