--- a/public/css/main.css
+++ b/public/css/main.css
@@ -557,7 +557,7 @@ input[type="radio"]:checked + label {
     margin-top: 30px; }
   #mainpage .headline {
     text-transform: uppercase;
-    background-color: white;
+    background-color: #A2DED0;
     color: black;
     width: auto;
     font-family: 'Oswald';
@@ -637,7 +637,8 @@ input[type="radio"]:checked + label {
   #mainpage .credentials {
     font-style: italic;
     text-align: center;
-    font-size: .9em; }
+    font-size: 1.5em;
+    margin-bottom: 10px; }
   #mainpage .containertainer {
     width: 80%;
     padding: 10%; }
@@ -667,11 +668,13 @@ input[type="radio"]:checked + label {
     border-bottom: 4px solid black; }
   #mainpage .subheader {
     font-family: 'Oswald';
+    text-transform: uppercase;
     background-color: #36D7B7;
     box-sizing: border-box;
     color: black;
     font-size: 1.8em;
     font-weight: bold;
+    margin-bottom: 5px;
     height: auto;
     min-height: 100px;
     padding: 20px;
@@ -703,6 +706,9 @@ row p {
 p {
   padding: 5px; }
 
+.description p {
+  font-family: 'Lato'; }
+
 .column, .columns {
   height: 100%; }
   .column img, .columns img {
@@ -715,5 +721,13 @@ p {
   background-image: url("../img/manyemojis.jpg");
   height: 300px;
   width: 300px; }
+
+#twitbutt {
+  float: right;
+  padding: 3px;
+  margin-right: 10px; }
+
+.linkz span:hover {
+  cursor: pointer; }
 
 /*# sourceMappingURL=main.css.map */
