--- a/views/codeindex.ejs
+++ b/views/codeindex.ejs
@@ -35,6 +35,8 @@
     <meta name="description" content="EmojiCode lets you encode any message into pure emojis and back again. The future of #Teen #Communication">
     <link type="text/css" rel="stylesheet" href="emojicode/css/pure-min.css">
     <link type="text/css" rel="stylesheet" href="emojicode/css/stylez.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+
     <link type="text/css" rel="stylesheet" href="emojicode/css/introjs.css">
 
     <link rel="shortcut icon" href="emojicode//favicon.ico" type="image/x-icon" />
@@ -47,94 +49,26 @@
     <link rel="apple-touch-icon" sizes="144x144" href="emojicode//apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="emojicode//apple-touch-icon-152x152.png" />
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <!--[if lte IE 8]>
-    <link rel="stylesheet" href="emojicode/http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
-    <!--<![endif]-->
-    <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
-    ga('create', 'UA-49429809-2', 'auto');
-    ga('send', 'pageview');
-    </script>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+
 </head>
 
 <body>
 
-    <div id="fb-root"></div>
-    <script>
-    (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-    </script>
 
-    <script src="emojicode/js/jquery.js" type="text/javascript"></script>
-    <script src="emojicode/js/jquery-ui.js" type="text/javascript"></script>
-    <script src="emojicode/js/intro.js" type="text/javascript"></script>
-    <script src="emojicode/js/introcode.js" type="text/javascript"></script>
-    <script src="emojicode/js/punycode.js" type="text/javascript"></script>
-    <script type="text/javascript" src="emojicode/js/ZeroClipboard.js"></script>
-    <script src="emojicode/js/interaction.js" type="text/javascript"></script>
-    <script src="emojicode/js/translate.js" type="text/javascript"></script>
-    <script src="emojicode/js/swfobject.js" type="text/javascript"></script>
-    <script src="emojicode/js/dictionaries.js" type="text/javascript"></script>
+    <script src="js/emojicode.js" type="text/javascript"></script>
 
-    <div class="mobile-menu"><a href="/">Emojivision Industries</a> - EmojiCode</div>
-    <div class="pure-menu pure-menu-open pure-menu-horizontal">
-        <ul>
-            <li>
-                <span id="menutitle">EmojiCode</span>
-            </li>
-            <li id="about-item">
-                <a href="emojicode/#" id="begin-tour">Guided Tour</a>
-            </li>
-            <li id="about-item">
-                <a href="emojicode/http://emoji-code.com/about.html">About</a>
-            </li>
 
-            <li class="share-button">
-                <a href="emojicode/https://twitter.com/share" class="twitter-share-button" data-text="#EmojiCode - hide messages in emojis">Tweet</a>
-                <script>
-                ! function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0],
-                        p = /^http:/.test(d.location) ? 'http' : 'https';
-                    if (!d.getElementById(id)) {
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = p + '://platform.twitter.com/widgets.js';
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }
-                }(document, 'script', 'twitter-wjs');
-                </script>
-            </li>
-            <li class="share-button">
-                <div class="fb-like" data-href="emojicode/http://emoji-code.com" data-width="40" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-            </li>
-        </ul>
-    </div>
+  <% include /partials/header %>
+
 
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-1"></div>
         <div class="pure-u-1 pure-u-md-1-1">
-            <div id="title">Encode / Decode</div>
+            <div id="title">EmojiCode</div>
         </div>
         <div class="pure-u-1 pure-u-md-1-1"></div>
     </div>
