--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@ vision lol
 -->
 
 
-<meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
+<meta name="description" content="EmojiVision Industries">
 
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
@@ -26,209 +26,148 @@ vision lol
 <script type="text/javascript" src="/js/vendor.js"></script>
 <script type="text/javascript" src="/js/slick.js"></script>
 <script type="text/javascript" src="/js/scripts/indexpage.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/normalize.css">
-<link rel="stylesheet" type="text/css" href="css/skeleton.css">
-
+<link rel="stylesheet" type="text/css" href="css/animations.css">
 
 
 <title>EmojiVision</title>
 </head>
-<body>
-  <div id="mainpage">
-
-    <div class="container">
-      <div class="row">
-        <div class="offset-by-three six columns">
-          <img id="logo" class="u-max-full-width" src="img/visionlogo.png">
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="offset-by-one ten columns divider"></div>
-      </div>
-      <div class="row linkz">
-        <div class="choice offset-by-two two columns">
-          <span>VISION</span>
-        </div>
-        <div class="choice two columns">
-          <span>PRODUCTS</span>
-        </div>
-        <div class="choice two columns">
-          <span>TEAM</span>
-        </div>
-        <div class="choice two columns">
-          <span>CONTACT</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="offset-by-one ten columns divider"></div>
-      </div>
-
-      <div class="row">
-        <div class="ten front columns offset-by-one">
-          <div class="catchphrase">
-
-          </div>
-        </div>
-        <div class="one column"></div>
-
-      </div>
-
-      <div class="row">
-        <div class="offset-by-one ten columns">
-          <div id="vision" class="headline">
-            <img src='emojis/475.png'>
-            <span>Our Vision</span>
-            <img class='flipped' src='emojis/475.png'>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="five columns offset-by-one description">
-          <div class="subheader">
-            <img src="emojis/389.png">
-            Modern Language For A Modern World
-          </div>
-          <p>Many written languages have existed for more than 5,000 years. Would you ride in a 5,000-year-old airplane? Would you use a 100-year-old computer? At EmojiVision Industries, we don't think so either. </p>
-          <p>It's time for an upgrade.</p>
-        </div>
-
-        <div class="five columns">
-          <img  class="business-img u-max-full-width" src='img/business.jpg'>
-
-        </div>
-      </div>
-      <div class="row">
-        <div class="ten columns offset-by-one description">
-
-          <div class="subheader">
-            <img src="emojis/440.png">
-            Tear Down The Language Wall</div>
-            <p>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="ten columns offset-by-one description">
-
-            <div class="subheader">
-              <img src="emojis/341.png">
-              Emoji Monetization</div>
-              <p>Investment. Disruption. Enterprise Technology. Monetization. Emojis.</p>
-              <p>We stay on the cutting edge of Emoji technology and are ready to help you bring your business into the Emoji future.</p>
-
+<body id="mainpage" data-spy="scroll" data-target=".navbar-nav">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#" data-scroll="top" id="mainanchor">EmojiVision</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#visionpage" data-scroll="visionpage">Vision</a>
+                        </li>
+                        <li>
+                            <a href="#productpage" data-scroll="productpage">Products</a>
+                        </li>
+                        <li>
+                            <a href="#teampage" data-scroll="teampage">Our Team</a>
+                        </li>
+                        <li>
+                            <a href="#contactpage" data-scroll="contactpage">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </div>
+        </nav>
 
+    <div id="splash" class="fill container">
 
+      <div class="row">
+        <div id="vertical-center">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <div class="expandOpen intro">
+          EmojiVision
+        </div>
+          <img id="moreinfo" class="floating img-responsive" src="emojis/down.png">
+        </div>
+
+        <div class="col-md-3"></div>
+        </div>
+      </div>
+    </div>
+
+     <div id="visionpage" class="container page vision">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="pagetitle col-md-6">OUR VISION</div>
+        <div class="col-md-3"></div>
+      </div>
+           <div class="row">
+
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
           <div class="row">
-            <div class="offset-by-one ten columns">
-              <div id="products" class="headline">
+            <div class="col-md-4 description">
+              <img src="emojis/656.png" alt="" class="icon img-responsive">
+              <h3>EMOJI VISION</h3>
+              <p>blah blah blahblahblah  blahblahblah  blahblahblah  blahblahblah blah </p>
 
-                <img src='emojis/475.png'>
-                <span>Products</span>
-                <img class='flipped' src='emojis/475.png'>
-              </div>
+            </div>
+            <div class="col-md-4 description">
+              <img src="emojis/122.png" alt="" class="icon img-responsive">
+
+              <h3>EMOJI WORLD</h3>
+              <p>blah blah blahblahblah  blahblahblah  blahblahblah  blahblahblah blah </p>
+
+            </div>
+            <div class="col-md-4 description">
+              <img src="emojis/333.png" alt="" class="icon img-responsive">
+
+              <h3>EMOJI EDUCATION</h3>
+              <p>blah blah blahblahblah  blahblahblah  blahblahblah  blahblahblah blah </p>
 
             </div>
           </div>
-
-          <div class="row">
-            <div class="ten columns offset-by-one description">
-              <div class="subheader">
-                <a href="/comics">
-                  <img src="emojis/538.png">
-                  Emoji Comics</div>
-                </a>
-                <div class="img-box">
-
-                  <img class="u-max-full-width imgcenter" src="img/examplecomic.png">
-                </div>
-                <p>Create and share comic strips using the entire range of Emoji.</p>
-                <p><em>Check out <a href="/comics">Emoji Comics</a></em></p>
-
-              </div>
-            </div>
-            <div class="row">
-              <div class="ten columns description offset-by-one">
-                <div class="subheader">
-                  <a href="/code">
-                    <img src="emojis/399.png">
-                    EmojiCode</div>
-                  </a>
-                </div>
-                <div class="row">
-                  <div class="four columns description offset-by-four">
-                    <img class="center-img" src="img/codeexample.png">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="ten columns description offset-by-one">
-
-                    <p>A proprietary encryption algorithm designed to convert boring, outdated letters and numbers into pure Emoji.</p>
-                    <p><em>Check out <a href="/code">EmojiCode</a></em></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="offset-by-one ten columns">
-                  <div id="team" class="headline">
-
-                    <img src='emojis/475.png'>
-                    <span>Our Team</span>
-                    <img class='flipped' src='emojis/475.png'>
-                  </div>
-                </div>
-
-                <div class="row">
-                 <div class="five columns offset-by-one description">
-                  <div class="subheader">Professor Moon</div>
-                  <img class="u-max-full-width" src="img/profmoon.jpg">
-                  <div class="credentials">Founder And Managing Director</div>
-                </div>
-                <div class="five columns">
-                  <div class="subheader">Dr. Jennifer iMessage</div>
-                  <img class="u-max-full-width" src="img/jenny.jpg">
-                  <div class="credentials">Director Of Research And Development</div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-             <div class="five columns offset-by-one description">
-              <div class="subheader">Lukey Q. Pizzaface</div>
-              <img class="u-max-full-width" src="img/pizzaface.jpg">
-              <div class="credentials">Director Of Communication</div>
-            </div>
-            <div class="five columns">
-              <div class="subheader">Princess Cupcake</div>
-              <img class="u-max-full-width" src="img/princess.jpg">
-              <div class="credentials">Chief Royal Advisor</div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="offset-by-one ten columns">
-              <div id="contact" class="headline">
-
-                <img src='emojis/475.png'>
-                <span>Contact</span>
-                <img class='flipped' src='emojis/475.png'>
-              </div>
-
-            </div>
-          </div>
-
- <div class="row">
-             <div class="ten columns offset-by-one description">
-              <p>For all inquiries, please contact our Director of Communications <a href="http://twitter.com/nah_solo">via twitter</a>.</p>
-            </div>
-
         </div>
+        <div class="col-md-1"></div>
+      </div>
+    </div>
+
+     <div id="productpage" class="container page products">
+
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 pagetitle">PRODUCTS</div>
+        <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5 product">emoji comics</div>
+        <div class="col-md-5 product">emoji code</div>
+        <div class="col-md-1"></div>
+
 
       </div>
+      </div>
+
+     <div id="teampage" class="container page team">
+
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 pagetitle">OUR TEAM</div>
+        <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5 product">emoji comics</div>
+        <div class="col-md-5 product">emoji code</div>
+        <div class="col-md-1"></div>
+
+
+      </div>
+    </div>
+
+     <div id="contactpage" class="container page contact">
+
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 pagetitle">Contact</div>
+        <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5 product">emoji comics</div>
+        <div class="col-md-5 product">emoji code</div>
+        <div class="col-md-1"></div>
+
+
+      </div>
+    </div>
 </body>
 </html>
